<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.jingfu.simplepaperbrowser.PaperBrowserActivity" >
	 <item
		android:id="@+id/action_filter_semester"
		android:actionViewClass="android.widget.Spinner"
		android:showAsAction="always"
		android:title="@string/action_bar_filter_semesters"/>	
		
     <item
        android:id="@+id/action_search"
        android:title="@string/action_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="collapseActionView|ifRoom"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
