<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.jingfu.paperbrowser.PaperInfoActivity" >

    <TextView
        android:id="@+id/paper_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/paper_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/paper_title"
        android:layout_marginTop="16dp"
        android:text="@string/acdemic_point" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/paper_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/paper_points"
        android:layout_marginTop="16dp"
        android:text="@string/paper_desc" />

    <TextView
        android:id="@+id/prerequisite_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paper_description"
        android:layout_alignStart="@+id/paper_description" 
        android:layout_below="@+id/paper_description"
        android:layout_marginTop="16dp"
        android:text="@string/prerequisite_paper"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/prerequisite_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prerequisite_title"
        android:layout_alignStart="@+id/prerequisite_title"
        android:layout_below="@+id/prerequisite_title"
        android:layout_marginTop="16dp"
        android:text="@string/prerequisite_paper_detail"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/assement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prerequisite_content"
        android:layout_alignStart="@+id/prerequisite_content"
        android:layout_below="@+id/prerequisite_content"
        android:layout_marginTop="16dp"
        android:text="@string/assessment_ratio"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/assessment_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/assement_title"
        android:layout_alignStart="@+id/assement_title"
        android:layout_below="@+id/assement_title"
        android:layout_marginTop="16dp"
        android:text="@string/assessment_ratio_detail"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>